<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <ImageView
        android:layout_width="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/holo_green_dark"
        android:text="Sign In"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <EditText
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:id="@+id/username"/>



    <EditText
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:id="@+id/password"/>

    <Button
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>



</LinearLayout>
